syntax = "proto3";

option java_multiple_files = true;
option java_package = "cl.ucn.disc.pdis.fivet.grpc";

message Credencial {
  string login = 1;
  string password = 2;
}

message PersonaEntity {
  string rut = 1;
  // string password = 2;
  string nombre = 3;
  string email = 4;
  string direccion = 5;
}

message ControlEntity {
  string fecha = 1;
  double temperatura = 2;
  double peso = 3;
  double altura = 4;
  string diagnostico = 5;
  PersonaEntity veterinario = 6;
}

enum SexoEntity{
    UNDEFINED = 0;
    MACHO = 1;
    HEMBRA = 2;
}

message NumeroFicha {
  int64 numeroFicha = 1;
}

message FichaMedicaEntity {
  int64 numeroFicha = 1;
  string nombrePaciente = 2;
  string especie = 3;
  string fechaNacimiento = 4;
  string raza = 5;
  SexoEntity sexo = 6;
  string color = 7;
  string tipo = 8;
  PersonaEntity duenio = 9;
  repeated ControlEntity controles = 10;
}
message AuthenticationReq {
    string login = 1;
    string password = 2;
}

message PersonaReply {
    PersonaEntity persona = 1;
}

message AddControlReq {
    int32 numeroFicha = 1;
    string rutVeterinario = 2;
    ControlEntity control = 3;
}

message ControlRequest {

}

message RetrieveReq{

}

message ControlReply {

}

message FichaMedicaReply {
    FichaMedicaEntity fichaMedica = 1;
}

message Control {
    string something = 1;
}

message RetrieveFichaMedicaReq{
    int32 numeroFicha = 1;
}

message SearchFichaMedicaReq {
    string query = 1;
}

message AddFichaMedicaReq {
    FichaMedicaEntity fichaMedica = 1;
}

message AddPersonaReq {
  PersonaEntity persona = 1;
}


service FivetService {
  rpc authenticate(AuthenticationReq) returns (PersonaReply) {}
  rpc addControl(AddControlReq) returns (FichaMedicaReply) {}
  rpc retrieveFicha(RetrieveFichaMedicaReq) returns (FichaMedicaReply) {}
  rpc searchFicha(SearchFichaMedicaReq) returns (stream FichaMedicaReply) {}
  rpc addFichaMedica(AddFichaMedicaReq) returns (FichaMedicaReply) {}
  rpc addPersona(AddPersonaReq) returns (PersonaReply) {}
}